backend/backend.log

> backend@1.0.0 dev
> ts-node src/server.ts

[dotenv@17.0.0] injecting env (6) from .env – 🔐 encrypt with dotenvx: https://dotenvx.com
🐳 Using local DynamoDB at http://localhost:8000
/Users/tejaswin/Downloads/sharp-crm-aws 2/backend/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
src/routes/contacts.ts(24,20): error TS2769: No overload matches this call.
  The last overload gave the following error.
    Argument of type '(req: Request<{ id: string; }, any, any, ParsedQs, Record<string, any>>, res: Response<any, Record<string, any>, number>) => Promise<...>' is not assignable to parameter of type 'Application<Record<string, any>>'.
      Type '(req: Request<{ id: string; }, any, any, ParsedQs, Record<string, any>>, res: Response<any, Record<string, any>, number>) => Promise<...>' is missing the following properties from type 'Application<Record<string, any>>': init, defaultConfiguration, engine, set, and 63 more.
src/routes/contacts.ts(54,20): error TS2769: No overload matches this call.
  The last overload gave the following error.
    Argument of type '(req: Request<{ id: string; }, any, any, ParsedQs, Record<string, any>>, res: Response<any, Record<string, any>, number>) => Promise<...>' is not assignable to parameter of type 'Application<Record<string, any>>'.
      Type '(req: Request<{ id: string; }, any, any, ParsedQs, Record<string, any>>, res: Response<any, Record<string, any>, number>) => Promise<...>' is missing the following properties from type 'Application<Record<string, any>>': init, defaultConfiguration, engine, set, and 63 more.
src/routes/contacts.ts(75,23): error TS2769: No overload matches this call.
  The last overload gave the following error.
    Argument of type '(req: Request<{ id: string; }, any, any, ParsedQs, Record<string, any>>, res: Response<any, Record<string, any>, number>) => Promise<...>' is not assignable to parameter of type 'Application<Record<string, any>>'.
      Type '(req: Request<{ id: string; }, any, any, ParsedQs, Record<string, any>>, res: Response<any, Record<string, any>, number>) => Promise<...>' is missing the following properties from type 'Application<Record<string, any>>': init, defaultConfiguration, engine, set, and 63 more.
src/routes/contacts.ts(95,33): error TS2769: No overload matches this call.
  The last overload gave the following error.
    Argument of type '(req: Request, res: Response, next: NextFunction) => Response<any, Record<string, any>> | undefined' is not assignable to parameter of type 'RequestHandlerParams<ParamsDictionary, any, any, ParsedQs, Record<string, any>>'.
      Type '(req: Request, res: Response, next: NextFunction) => Response<any, Record<string, any>> | undefined' is not assignable to type 'RequestHandler<ParamsDictionary, any, any, ParsedQs, Record<string, any>>'.
        Type 'Response<any, Record<string, any>> | undefined' is not assignable to type 'void | Promise<void>'.
          Type 'Response<any, Record<string, any>>' is not assignable to type 'void | Promise<void>'.

    at createTSError (/Users/tejaswin/Downloads/sharp-crm-aws 2/backend/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/Users/tejaswin/Downloads/sharp-crm-aws 2/backend/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/Users/tejaswin/Downloads/sharp-crm-aws 2/backend/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/Users/tejaswin/Downloads/sharp-crm-aws 2/backend/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/Users/tejaswin/Downloads/sharp-crm-aws 2/backend/node_modules/ts-node/src/index.ts:1617:30)
    at node:internal/modules/cjs/loader:1895:10
    at Object.require.extensions.<computed> [as .ts] (/Users/tejaswin/Downloads/sharp-crm-aws 2/backend/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1465:32)
    at Function._load (node:internal/modules/cjs/loader:1282:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 2769, 2769, 2769, 2769 ]
}
